@@ -2000,7 +2000,7 @@ SCIP_RETCODE presolRoundConssSOS1(
                   }
 
                   /* get intersection with comsucc */
-                  SCIP_CALL( SCIPcomputeArraysIntersection(comsucc, ncomsucc, succ, nsucc, comsucc, &ncomsucc) );
+                  SCIPcomputeArraysIntersectionInt(comsucc, ncomsucc, succ, nsucc, comsucc, &ncomsucc);
                }
             }
 
@@ -5050,13 +5050,13 @@ SCIP_RETCODE addBranchingComplementaritiesSOS1(
             }
 
             /* compute second partition of fixingsnode2 (that is fixingsnode2 \setminus fixingsnode21 ) */
-            SCIP_CALL( SCIPcomputeArraysSetminus(fixingsnode2, nfixingsnode2, fixingsnode21, nfixingsnode21, fixingsnode22, &nfixingsnode22) );
+            SCIPcomputeArraysSetminusInt(fixingsnode2, nfixingsnode2, fixingsnode21, nfixingsnode21, fixingsnode22, &nfixingsnode22);
             assert ( nfixingsnode22 + nfixingsnode21 == nfixingsnode2 );
 
             /* compute cover set (that are all the vertices not in fixingsnode1 and fixingsnode21, whose neighborhood covers all the vertices of fixingsnode22) */
             SCIP_CALL( getCoverVertices(conflictgraph, verticesarefixed, -1, fixingsnode22, nfixingsnode22, coverarray, &ncoverarray) );
-            SCIP_CALL( SCIPcomputeArraysSetminus(coverarray, ncoverarray, fixingsnode1, nfixingsnode1, coverarray, &ncoverarray) );
-            SCIP_CALL( SCIPcomputeArraysSetminus(coverarray, ncoverarray, fixingsnode21, nfixingsnode21, coverarray, &ncoverarray) );
+            SCIPcomputeArraysSetminusInt(coverarray, ncoverarray, fixingsnode1, nfixingsnode1, coverarray, &ncoverarray);
+            SCIPcomputeArraysSetminusInt(coverarray, ncoverarray, fixingsnode21, nfixingsnode21, coverarray, &ncoverarray);
 
             for (j = 0; j < ncoverarray; ++j)
             {
@@ -5298,7 +5298,7 @@ SCIP_RETCODE resetConflictgraphSOS1(
          nsucc = SCIPdigraphGetNSuccessors(conflictgraph, j);
 
          /* reset number of successors */
-         SCIP_CALL( SCIPcomputeArraysSetminus(succ, nsucc, succloc, nsuccloc, succ, &k) );
+         SCIPcomputeArraysSetminusInt(succ, nsucc, succloc, nsuccloc, succ, &k);
          SCIP_CALL( SCIPdigraphSetNSuccessors(conflictgraph, j, k) );
          SCIP_CALL( SCIPdigraphSetNSuccessors(localconflicts, j, 0) );
       }
